--- a/BigShop/Views/Products/Index.cshtml
+++ b/BigShop/Views/Products/Index.cshtml
@@ -95,7 +95,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="single-promo">
                     <i class="fa fa-refresh"></i>
-                    <p>Возврат 30 дней</p>
+                    <p>Возврат</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
