--- a/BigShop/Views/Products/Details.cshtml
+++ b/BigShop/Views/Products/Details.cshtml
@@ -35,7 +35,7 @@
             <a asp-controller="Orders" asp-action="AddOrder" asp-route-productId="@Model.ProductId" class="add_to_cart_button">Заказать</a>                       
                                     
             <div class="product-inner-category">
-                <p>Category: @ViewBag.Category </p>
+                <p>Категория: @ViewBag.Category </p>
             </div> 
                                     
             <div role="tabpanel">
