--- a/BigShop/Views/Shared/_Layout.cshtml
+++ b/BigShop/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="logo">
-                        <h1><a href="index.html">DinaUz<span>Online</span></a></h1>
+                        <h1><a asp-controller="Products" asp-action="Index">DinaUz<span>Online</span></a></h1>
                     </div>
                 </div>
                 <div class="col-sm-6" style="margin-top: 35px">
