--- a/BigShop/Views/Shared/_Layout.cshtml
+++ b/BigShop/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="logo">
-                        <h1><a asp-controller="Products" asp-action="Index">DinaUz<span>Online</span></a></h1>
+                        <h1><a asp-controller="Products" asp-action="Index">DiNa<span>Online</span></a></h1>
                     </div>
                 </div>
                 <div class="col-sm-6" style="margin-top: 35px">
@@ -107,7 +107,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <div class="footer-about-us">
-                        <h2>DinaUz<span>Online</span></h2>
+                        <h2>DiNa<span>Online</span></h2>
                         <p>Компания DinaUzOnline стремительно прорабатывает все свои возможности, и сегодня мы предлагаем своим клиентам значительные скидки и быструю доставку в ряды городов. Мы будем рады вам, в любое время. С любовью команда DinaUzOnline</p>
                         <div class="footer-social">
                             <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
